test/helpers/integrationHelpers/fail/senderId.js
//TODO Add fail tests for senderId

module.exports = {};
